fix alignment issue between tasklist header and task header.

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -19,6 +19,7 @@ html, body {
   background: white;
   font-family: sans-serif;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 a, button {
